--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha06'
-    implementation 'androidx.paging:paging-rxjava3:3.0.0-alpha06'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -93,6 +92,7 @@ dependencies {
 
     kapt 'androidx.room:room-compiler:2.3.0-alpha02'
     implementation 'androidx.room:room-runtime:2.3.0-alpha02'
+    implementation 'androidx.room:room-ktx:2.3.0-alpha02'
 
     implementation 'com.airbnb.android:lottie:3.4.2'
 
