--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "POKEMON_INFO_BASE_URL", "\"https://pokeapi.co/api/v2/\""
-        buildConfigField "String", "POKEMON_IMAGE_BASE_URL", "\"https://img.pokemondb.net/artwork/large/\""
+        buildConfigField "String", "POKEMON_IMAGE_BASE_URL", "\"https://pokeres.bastionbot.org/images/pokemon/\""
     }
 
     buildTypes {
@@ -39,10 +39,12 @@ android {
     productFlavors {
         mocked {
             dimension "mock"
+            buildConfigField "boolean", "MOCK_DATA", "true"
         }
 
         unmocked {
             dimension "mock"
+            buildConfigField "boolean", "MOCK_DATA", "false"
         }
     }
 
