--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,17 +67,25 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.koin:koin-test:2.0.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation "androidx.core:core-ktx:1.5.0-alpha03"
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha06'
+
+    implementation 'org.jetbrains.anko:anko:0.10.8'
+
+    implementation 'com.tapadoo.android:alerter:4.0.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
