--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
 
     implementation 'androidx.paging:paging-runtime:3.0.0-alpha06'
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "com.google.android.material:material:1.2.1"
+
     implementation 'org.jetbrains.anko:anko:0.10.8'
 
     implementation 'com.tapadoo.android:alerter:4.0.0'
