--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         <activity
             android:name=".view.MainActivity"
             android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".view.PokemonDetailsActivity" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +28,19 @@
 
         <activity
             android:name=".view.PokemonDetailsActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
+        <provider
+            android:name="com.lucasrodrigues.pokemonshowcase.components.SuggestionProvider"
+            android:authorities="com.lucasrodrigues.pokemonshowcase.SuggestionProvider" />
     </application>
 </manifest>
