--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    kapt 'com.airbnb.android:epoxy-processor:4.0.0'
+    implementation 'com.airbnb.android:epoxy:4.0.0'
+    implementation 'com.airbnb.android:epoxy-databinding:4.0.0'
+
     implementation "androidx.core:core-ktx:1.5.0-alpha03"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
