--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,8 +116,7 @@ dependencies {
     kapt 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     kapt 'com.android.databinding:compiler:3.1.4'
 
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.google.android:flexbox:2.0.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
